@@ -6,6 +6,9 @@ WebAuth 3.5.3 (unreleased)
     that WebAuth will compile under Apache 2.2.  Thanks to Jim Rodgers for
     the patch.
 
+ *) Remove duplicate defininitions from src/modules/webauth/mod_webauth.h.
+    Thanks to Robert A. Basch for the patch.
+
 WebAuth 3.5.2 (2006-07-13)
 
  *) SECURITY: Modify the default templates to add ESCAPE=HTML when
